I added section to wrap my title in a container.

--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<h1> Data Center College of the Philippines - Baguio </h1>
-<p> C# Programming </p>
+<div class="container">
+  <h1> Data Center College of the Philippines - Baguio </h1>
+  <p> C# Programming </p>
+</div>
