connect style to our webpage

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
 <div class="container">
   <h1> Data Center College of the Philippines - Baguio </h1>
   <p> C# Programming </p>
