--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 
 <div class="container">
   <h1> Data Center College of the Philippines - Baguio </h1>
-  <p> C# Programming </p>
+  <p> C# Programming Check Update</p>
 </div>
